--- a/app/views/layouts/app2.html.erb
+++ b/app/views/layouts/app2.html.erb
@@ -13,6 +13,7 @@
   <%= javascript_include_tag 'facebox' %>
   <%= javascript_include_tag 'emotion' %>
   <%= javascript_include_tag 'util' %>
+  <%= javascript_include_tag 'game_suggestion' %>
   <%= calendar_date_select_includes "silver" %>
 </head>
 <body>
