--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -10,18 +10,42 @@
   <%= collection_select :character, :game_id, Game.all, :id, :name, {:prompt => '---'}, {:onchange => "profile_manager.game_onchange()"} %><br/>
   <a id='character_game_info'></a>
     <div id='tips'><%= link_to_function "提示", "tip(\"由于游戏数量庞大，很多游戏已经停服，我们没有把所有游戏统计完成。这个游戏的资料就还不完全，请您在左边的意见／建议中告诉我们您所在游戏的所在服务器，我们会以最快速度为您添加。对您带来得不便，我们道歉。\");" %></div>
+    <%= label_tag '', '请给这款游戏打分' %>
+    <div id='star-ratings-block'>
+<ul class='star-rating'>
+    <div id='current_rate'><li class='current-rating' style='width:<%= (@rating * 30).to_i -%>px;'>
+          Currently <%= @rating %>/5 Stars.
+    </li></div>
+    <li>
+        <%= link_to_function( "1", "profile_manager.setup_rating_info(1)" ,:class => 'one-star', :name => '1 star out of 5') %>
+    </li>
+    <li>
+        <%= link_to_function( "2", "profile_manager.setup_rating_info(2)" ,:class => 'one-star', :name => '2 star out of 5') %>
+    </li>
+    <li>
+        <%= link_to_function( "3", "profile_manager.setup_rating_info(3)" ,:class => 'one-star', :name => '3 star out of 5') %>
+    </li>
+    <li>
+        <%= link_to_function( "4", "profile_manager.setup_rating_info(4)" ,:class => 'one-star', :name => '4 star out of 5') %>
+    </li>
+    <li>
+        <%= link_to_function( "5", "profile_manager.setup_rating_info(5)" ,:class => 'one-star', :name => '5 star out of 5') %>
+    </li>
+</ul>
+    </div>
+  <div id='star_value'><%= hidden_field_tag('game_rate', @rating)%></div>
 	<%= f.label '区域: ' %>
   <%= collection_select :character, :area_id, [], :id, :name, {:prompt => '---'}, {:onchange => "profile_manager.area_onchange()"} %><br/>
   <a id='character_area_info'></a>
 	<%= f.label '服务器: '%>
   <%= collection_select :character, :server_id, [], :id, :name, {:prompt => '---'} %><br/>
 	<a id='character_server_info'></a>
-	<%= f.label '职业: '%>
-  <%= collection_select :character, :profession_id, [], :id, :name, {:prompt => '---'} %><br/>
-	<a id='character_profession_info'></a>
 	<%= f.label '种族: '%>
   <%= collection_select :character, :race_id, [], :id, :name, {:prompt => '---'} %><br/>
 	<a id='character_race_info'></a>
+	<%= f.label '职业: '%>
+  <%= collection_select :character, :profession_id, [], :id, :name, {:prompt => '---'} %><br/>
+	<a id='character_profession_info'></a>
 	<%= button_to_function '创建', "profile_manager.create_character_info();" %>
   <%= link_to_function '取消', "profile_manager.leave_new_character_info();" %>
 <% end %>
